--- a/TEST_MONITORING/.settings/org.talend.repository.prefs
+++ b/TEST_MONITORING/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=branches/Master
 repository.project.id=enc\:migration.token.encryption.key\:0Igcyq6oAuPnoHzkBHJyvJbQD+BrBx/Z1gsrB2t4ZM4dNdZIitpzhw4\=
